--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,12 @@ spring.mvc.view.suffix=.jsp
 
 #Comment out the ddl-auto line after the first time you run the application
 #spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+#spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.show-sql = true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/blog?createDatabaseIfNotExist=true
